// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`the H4 component should accept additional props 1`] = `
<RCTSafeAreaView
  onLayout={[Function]}
  style={
    Object {
      "bottom": 0,
      "left": 0,
      "position": "absolute",
      "right": 0,
      "top": 0,
    }
  }
>
  <View
    onLayout={[Function]}
    style={
      Object {
        "flex": 1,
      }
    }
  />
  <View
    style={
      Object {
        "bottom": 0,
        "left": 0,
        "position": "absolute",
        "right": 0,
        "top": 0,
      }
    }
  >
    <Text
      accessible={false}
      style={
        Object {
          "color": "#303030",
          "fontFamily": "InterUI-Bold",
          "fontSize": 16,
          "lineHeight": 23.04,
        }
      }
    >
      "What you are is God's gift to you, what you become is your gift to God." ― Hans Urs von Balthasar
    </Text>
  </View>
</RCTSafeAreaView>
`;

exports[`the H4 component should accept and render passed in styles 1`] = `
<RCTSafeAreaView
  onLayout={[Function]}
  style={
    Object {
      "bottom": 0,
      "left": 0,
      "position": "absolute",
      "right": 0,
      "top": 0,
    }
  }
>
  <View
    onLayout={[Function]}
    style={
      Object {
        "flex": 1,
      }
    }
  />
  <View
    style={
      Object {
        "bottom": 0,
        "left": 0,
        "position": "absolute",
        "right": 0,
        "top": 0,
      }
    }
  >
    <Text
      style={
        Object {
          "color": "salmon",
          "fontFamily": "InterUI-Bold",
          "fontSize": 16,
          "lineHeight": 23.04,
        }
      }
    >
      Salmon text
    </Text>
  </View>
</RCTSafeAreaView>
`;

exports[`the H4 component should render a loading state 1`] = `
<RCTSafeAreaView
  onLayout={[Function]}
  style={
    Object {
      "bottom": 0,
      "left": 0,
      "position": "absolute",
      "right": 0,
      "top": 0,
    }
  }
>
  <View
    onLayout={[Function]}
    style={
      Object {
        "flex": 1,
      }
    }
  />
  <View
    style={
      Object {
        "bottom": 0,
        "left": 0,
        "position": "absolute",
        "right": 0,
        "top": 0,
      }
    }
  >
    <View
      style={
        Object {
          "alignSelf": "stretch",
          "backgroundColor": "#A5A5A5",
          "borderRadius": 16,
          "height": 16,
          "marginVertical": 3.5199999999999996,
          "width": "80%",
        }
      }
    />
  </View>
</RCTSafeAreaView>
`;

exports[`the H4 component should render a loading state with correct positioning (margins) 1`] = `
<RCTSafeAreaView
  onLayout={[Function]}
  style={
    Object {
      "bottom": 0,
      "left": 0,
      "position": "absolute",
      "right": 0,
      "top": 0,
    }
  }
>
  <View
    onLayout={[Function]}
    style={
      Object {
        "flex": 1,
      }
    }
  />
  <View
    style={
      Object {
        "bottom": 0,
        "left": 0,
        "position": "absolute",
        "right": 0,
        "top": 0,
      }
    }
  >
    <View
      style={
        Object {
          "alignSelf": "stretch",
          "backgroundColor": "#A5A5A5",
          "borderRadius": 16,
          "height": 16,
          "marginBottom": 11.52,
          "marginTop": 15.21,
          "marginVertical": 3.5199999999999996,
          "width": "80%",
        }
      }
    />
  </View>
</RCTSafeAreaView>
`;

exports[`the H4 component should render correctly 1`] = `
<RCTSafeAreaView
  onLayout={[Function]}
  style={
    Object {
      "bottom": 0,
      "left": 0,
      "position": "absolute",
      "right": 0,
      "top": 0,
    }
  }
>
  <View
    onLayout={[Function]}
    style={
      Object {
        "flex": 1,
      }
    }
  />
  <View
    style={
      Object {
        "bottom": 0,
        "left": 0,
        "position": "absolute",
        "right": 0,
        "top": 0,
      }
    }
  >
    <Text
      style={
        Object {
          "color": "#303030",
          "fontFamily": "InterUI-Bold",
          "fontSize": 16,
          "lineHeight": 23.04,
        }
      }
    >
      Default H4 text
    </Text>
  </View>
</RCTSafeAreaView>
`;

exports[`the H4 component should render with correct padding 1`] = `
<RCTSafeAreaView
  onLayout={[Function]}
  style={
    Object {
      "bottom": 0,
      "left": 0,
      "position": "absolute",
      "right": 0,
      "top": 0,
    }
  }
>
  <View
    onLayout={[Function]}
    style={
      Object {
        "flex": 1,
      }
    }
  />
  <View
    style={
      Object {
        "bottom": 0,
        "left": 0,
        "position": "absolute",
        "right": 0,
        "top": 0,
      }
    }
  >
    <Text
      padded={true}
      style={
        Object {
          "color": "#303030",
          "fontFamily": "InterUI-Bold",
          "fontSize": 16,
          "lineHeight": 23.04,
          "paddingBottom": 11.52,
          "paddingTop": 15.21,
        }
      }
    >
      Padded H4 text
    </Text>
  </View>
</RCTSafeAreaView>
`;
